--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,1433;Database=MyAppDB;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=true;"
   },
+  "Ollama": {
+    "BaseUrl": "http://localhost:11434",
+    "ModelName": "gemma3:4b"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
