新增聊天功能與資料庫支援，重構服務邏輯，改善使用者介面與錯誤處理

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=MyAppDB;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=MyAppDB;Integrated Security=true;TrustServerCertificate=true;"
   },
   "Ollama": {
     "BaseUrl": "http://localhost:11434",
