--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,8 +1,11 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Warning",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Error",
+      "System": "Error",
+      "MyApp.Services": "Debug"
     }
   }
 }
